[tool.poetry]
name = "rezume-theme-compact"
version = "0.1.0"
description = ""
authors = ["Abdulhakeem Shaibu <hkmshb@gmail.com>"]
packages = [
    { include="rezume_theme", from="src" }
]

[tool.poetry.dependencies]
python = "^3.6"
chevron = "^0.13.1"
rezume = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
